objects/tffa__OfferMatrix__c.object
<CustomObject>
    <description>Represents the business rules for filtering offers available for applying. Criteria for filtering is mostly based on the party attributes e.g. credit bureau grade/score and the related product attributes e.g. credit card purpose for credit card products, vehicle loan purpose for a vehicle loan products, etc. Additionally each row (or record) in the matrix has a purpose which matches the purpose of the offer (outcome) and is related to a use case e.g. prequalified offers. The purpose controls what facts (or columns in the row) are available for evaluation. e.g. facts used for filtering prequalified offers may differ from facts used for filtering preapproved offers.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the matrix is active for consumption. Derived from disabled and offer active state.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__Offer__r.tffa__Active__c = True</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCodeSet__c</fullName>
        <description>The unique codes of the brands under which the offer is applicable. A fact. Supports multiple values (semicolon separated).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ensure you wrap each individual value in semicolons e.g. ;123;456;</inlineHelpText>
        <label>Brand code (set)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ChannelSet__c</fullName>
        <description>The channel via which the application was started. Supports multiple. A fact.</description>
        <label>Channel (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditBureauGradeSet__c</fullName>
        <description>The credit bureau grades for which the offer is applicable. A fact. Supports multiple values.</description>
        <label>Credit bureau grade (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CreditBureauGrade</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditBureauScoreFrom__c</fullName>
        <description>The lower bound on the credit bureau score for which the offer is applicable. A fact.</description>
        <label>Credit bureau score (from)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CreditBureauScoreTo__c</fullName>
        <description>The upper bound on the credit bureau score for which the offer is applicable. A fact.</description>
        <label>Credit bureau score (to)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CreditCardPurposeSet__c</fullName>
        <description>The credit card product purposes for which the offer is applicable. A fact. Supports multiple values.</description>
        <label>Credit card purpose (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CreditCardPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Explains the rule, giving some context about why the rule conditions (facts) lead to the rule action (outcome).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the matrix is not available for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__HELOCPurposeSet__c</fullName>
        <description>The HELOC product purposes for which the offer is applicable. A fact. Supports multiple values.</description>
        <label>HELOC purpose (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HELOCPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Offer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The offer. An outcome.</description>
        <label>Offer (outcome)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Offer must be active and should of same purpose and product category.</errorMessage>
            <filterItems>
                <field>tffa__Offer__c.tffa__Purpose__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__Purpose__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Offer__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>tffa__Offer__c.tffa__ProductCategory__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__ProductCategory__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Offer__c</referenceTo>
        <relationshipLabel>Matrices</relationshipLabel>
        <relationshipName>Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <description>The party role - Prospect, Customer for which the offer is applicable. A fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartySegmentSet__c</fullName>
        <description>The party segments - Affluent, Private/Wealth, General for which the offer is applicable. A fact. Supports multiple values (semicolon separated).</description>
        <label>Party segment (set)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartySegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PersonalLoanPurposeSet__c</fullName>
        <description>The personal loan product purposes for which the offer is applicable. A fact. Supports multiple values.</description>
        <label>Personal loan purpose set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PersonalLoanPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>The product category of the offer product. A fact.</description>
        <label>Product category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Purpose__c</fullName>
        <description>Purpose of the related offer. Controls what facts (or columns in the row) are available for evaluation. e.g. facts used for filtering prequalified offers may differ from facts used for filtering preapproved offers. A fact.</description>
        <label>Purpose</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OfferPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Defines the relative order of records. Translates to relative order of offers available for selection.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleLoanPurposeSet__c</fullName>
        <description>The vehicle loan product purposes for which the offer is applicable. A fact. Supports multiple values.</description>
        <label>Vehicle loan purpose set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__VehicleLoanPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VehicleTypeSet__c</fullName>
        <description>The vehicle types for which the offer is applicable. A fact. Supports multiple values.</description>
        <label>Vehicle type set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__VehicleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VehicleUsedIs__c</fullName>
        <description>The vehicle state expressed in terms of used - true, false or null for which the offer is applicable. A fact.</description>
        <label>Vehicle used (is)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ValueKind</valueSetName>
        </valueSet>
    </fields>
    <label>Offer Matrix</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__Prequal</fullName>
        <columns>NAME</columns>
        <columns>tffa__ProductCategory__c</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__CreditBureauGradeSet__c</columns>
        <columns>tffa__PartySegmentSet__c</columns>
        <columns>tffa__Offer__c</columns>
        <columns>tffa__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>PREQUAL</value>
        </filters>
        <label>Prequal</label>
    </listViews>
    <listViews>
        <fullName>tffa__Prequal_CreditCard</fullName>
        <columns>NAME</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__CreditBureauGradeSet__c</columns>
        <columns>tffa__PartySegmentSet__c</columns>
        <columns>tffa__CreditCardPurposeSet__c</columns>
        <columns>tffa__Offer__c</columns>
        <columns>tffa__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>PREQUAL</value>
        </filters>
        <filters>
            <field>tffa__ProductCategory__c</field>
            <operation>equals</operation>
            <value>CREDIT_CARD</value>
        </filters>
        <label>Prequal - Credit Card</label>
    </listViews>
    <listViews>
        <fullName>tffa__Prequal_HELOC</fullName>
        <columns>NAME</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__CreditBureauGradeSet__c</columns>
        <columns>tffa__PartySegmentSet__c</columns>
        <columns>tffa__Offer__c</columns>
        <columns>tffa__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>PREQUAL</value>
        </filters>
        <filters>
            <field>tffa__ProductCategory__c</field>
            <operation>equals</operation>
            <value>HELOC</value>
        </filters>
        <label>Prequal - HELOC</label>
    </listViews>
    <listViews>
        <fullName>tffa__Prequal_PersonalLineOfCredit</fullName>
        <columns>NAME</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__CreditBureauGradeSet__c</columns>
        <columns>tffa__PartySegmentSet__c</columns>
        <columns>tffa__Offer__c</columns>
        <columns>tffa__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>PREQUAL</value>
        </filters>
        <filters>
            <field>tffa__ProductCategory__c</field>
            <operation>equals</operation>
            <value>PERSONAL_LINE_OF_CREDIT</value>
        </filters>
        <label>Prequal - Personal Line Of Credit</label>
    </listViews>
    <listViews>
        <fullName>tffa__Prequal_PersonalLoan</fullName>
        <columns>NAME</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__CreditBureauGradeSet__c</columns>
        <columns>tffa__PartySegmentSet__c</columns>
        <columns>tffa__Offer__c</columns>
        <columns>tffa__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>PREQUAL</value>
        </filters>
        <filters>
            <field>tffa__ProductCategory__c</field>
            <operation>equals</operation>
            <value>PERSONAL_LOAN</value>
        </filters>
        <label>Prequal - Personal Loan</label>
    </listViews>
    <listViews>
        <fullName>tffa__Prequal_VehicleLoan</fullName>
        <columns>NAME</columns>
        <columns>tffa__PartyRole__c</columns>
        <columns>tffa__CreditBureauGradeSet__c</columns>
        <columns>tffa__PartySegmentSet__c</columns>
        <columns>tffa__VehicleTypeSet__c</columns>
        <columns>tffa__VehicleUsedIs__c</columns>
        <columns>tffa__Offer__c</columns>
        <columns>tffa__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Purpose__c</field>
            <operation>equals</operation>
            <value>PREQUAL</value>
        </filters>
        <filters>
            <field>tffa__ProductCategory__c</field>
            <operation>equals</operation>
            <value>VEHICLE_LOAN</value>
        </filters>
        <label>Prequal - Vehicle Loan</label>
    </listViews>
    <nameField>
        <displayFormat>OM-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>